Fix wrapping issue in boxes

--- a/pantry/style.css
+++ b/pantry/style.css
@@ -190,7 +190,6 @@ section {
   grid-row: 2;
   font-size: 8px;
   color: #8aaa8a;
-  white-space: nowrap;
   text-align: right;
 }
 
